# Synthetics

./: README.md  package.json
backend/: README.md
backend/api/: API_DOCS.md  PR_NOTE.md  package-lock.json  package.json  tsconfig.paths.json
backend/api/src/: app.module.ts  main.ts
client-app/: README.md  package.json
client-app/app/: globals.css  layout.tsx  page.tsx
client-app/components/: asset-overview.tsx  dashboard.tsx  deposit-form.tsx  header.tsx  loading-dashboard.tsx  mint-form.tsx  price-chart.tsx  redeem-form.tsx  wallet-connect.tsx  wallet-provider.tsx
client-app/components/ui/: chart.tsx
client-app/hooks/: use-synthetic-assets.tsx
client-app/lib/: contract-interactions.ts  mock-data.ts  utils.ts
smart-contracts/: .rust-toolchain.toml
smart-contracts/synthetic_sc/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
smart-contracts/synthetic_sc/bots/: crank-usdc-stesla.ts
smart-contracts/synthetic_sc/programs/synthetic_sc/: Cargo.toml  README.md
smart-contracts/synthetic_sc/programs/synthetic_sc/src/: error.rs  lib.rs
smart-contracts/synthetic_sc/programs/synthetic_sc/src/events/: deposit_event.rs  mod.rs  sTesla_minted.rs  trade_executed.rs
smart-contracts/synthetic_sc/programs/synthetic_sc/src/instructions/: deposit_collateral.rs  initialize.rs  initialize_price_oracle.rs  market_trade.rs  mint_sTsla.rs  mod.rs  redeem_sTSLA.rs  update_price.rs
smart-contracts/synthetic_sc/programs/synthetic_sc/src/state/: mod.rs  price_oracle.rs  user_collateral_account.rs
smart-contracts/synthetic_sc/tests/: README.md  (+1 more)
(+23 files in other folders)
